--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/stereoHeight"]
 	path = src/stereoHeight
-	url = git@github.com:Jorge15042001/StereoHeightStimation.git
+	url = https://github.com/Jorge15042001/StereoHeightStimation.git
